# data-eng-monorepo

./: .gitignore  README.md  setup.py
cdc/local/stock_events/: docker-compose.yml
cdc/local/stock_events/broker/: docker_compose_override.yml
cdc/local/stock_events/broker/connect_config/: stock_trades.json
cdc/local/stock_events/database/: DockerComposeOverride.yml  Readme.md
cdc/local/stock_events/database/timescaledb/: init.sql
change_data_capture/local/stock_events/: Readme.md  docker-compose.yml
change_data_capture/local/stock_events/producer/: .env  generate_stock_events.py  load_stock_events.py  requirements.txt  stock_events_data_access_interface.py  stock_events_db_access_interface.py
event-ingestion-pipeline/: Makefile  docker-compose.yml
event-ingestion-pipeline/business_logic/elixir/: mix.exs
event-ingestion-pipeline/business_logic/elixir/config/: config.exs
event-ingestion-pipeline/consumer/persistence/: data_model.txt
event-ingestion-pipeline/consumer/persistence/scylladb/rust/: .env  Cargo.toml  Dockerfile
event-ingestion-pipeline/consumer/persistence/scylladb/rust/src/: consumer.rs  main.rs  model.rs
event-ingestion-pipeline/consumer/persistence/scylladb/rust/src/database/: mod.rs  repository.rs
event-ingestion-pipeline/consumer/persistence/scylladb/rust/src/metrics/: logger.rs
event-ingestion-pipeline/event_processor/: Dockerfile  deps.txt
event-ingestion-pipeline/event_processor/rust/: Cargo.toml
event-ingestion-pipeline/event_processor/rust/src/: api.rs  event.rs  main.rs  processor.rs
event-ingestion-pipeline/event_processor/rust/src/publisher/: mock.rs  mod.rs  redpanda.rs
event-ingestion-pipeline/infra/clickhouse/: Dockerfile
event-ingestion-pipeline/infra/redpanda/: Dockerfile
event-ingestion-pipeline/infra/scylladb/: Dockerfile
event-ingestion-pipeline/infra/superset/: Dockerfile
event-ingestion-pipeline/ingress/: endpoints.rest  ingress.collection.json
event-ingestion-pipeline/ingress/rust/: Cargo.toml  build.rs
event-ingestion-pipeline/ingress/rust/proto/: event.proto
event-ingestion-pipeline/ingress/rust/src/: event.rs  main.rs
event-ingestion-pipeline/ingress/rust/src/forwarder/grpc/: conversion.rs  elixir_client.rs  handler.rs  mod.rs
event-ingestion-pipeline/ingress/rust/src/producer/: handler.rs  mod.rs  redpanda.rs
event-ingestion-pipeline/proto/: event.proto
event-ingestion-pipeline/router/elixir/: mix.exs
hudi/intro/local/: README.md
hudi/intro/local/python/: README.md  hudi_spark_interaction.py  spark_cluster_interaction.py
minio/: .env  Readme.md  minio_cli.py  pyproject.toml  requirements.txt
spark/: Dockerfile  docker-compose.yml  log4j.properties  requirements.txt
spark/minio/data/.minio.sys/: format.json
trading/disp_vol_check/: main.py  pyproject.toml  stocks.py
(+27 files in other folders)
