[package]
name = "event_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web layer
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Time + UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
serde_with = "3.6"
[build-dependencies]
tonic-build = "0.11"
