[package]
name = "ingress"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
