[package]
name = "scylladb_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scylla = "0.12"
rdkafka = { version = "0.36", features = ["tokio"] }
once_cell = "1.19"
dotenvy = "0.15"
