[package]
name = "scylladb_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scylla = "0.12"
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
once_cell = "1.19"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
